fix some alignment and

--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ footer {
     color: white;
     padding: 1em;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -76,4 +76,10 @@ footer a {
 
 footer a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+    div {
+      margin-bottom: 20px;
+    }
 }
